feat: docsible and molecule updated

--- a/.docsible_template.md
+++ b/.docsible_template.md
@@ -83,10 +83,10 @@ ansible-galaxy install -r meta/install_requirements.yml
 {% for file in role.defaults %}
 ### File: `defaults/{{ file.file }}`
 
-| Variable | Default Value | Description |
-|----------|---------------|-------------|
+| Variable | Type | Default Value | Description |
+|----------|------|---------------|-------------|
 {%- for var, data in file.data.items() %}
-| `{{ var }}` | `{{ data.value }}` | {{ data.description | default('No description') }} |
+| [`{{ var }}`](defaults/{{ file.file }}#L{{ data.line | default('') }}) | {{ data.type | default('str') }} | `{{ data.value }}` | {{ data.description | default('_No description provided_') }} |
 {%- endfor %}
 
 {% endfor %}
@@ -100,16 +100,24 @@ No default variables defined.
 This role performs the following tasks:
 
 {% for task_file in role.tasks %}
-### `{{ task_file.file }}`
+### File: `tasks/{{ task_file.file }}`
 
-{% for task in task_file.tasks %}
+| Task Name | Module | Has Conditions | Line |
+|-----------|--------|----------------|------|
+{%- for task in task_file.tasks %}
 {%- if task.name %}
-- **{{ task.name }}**
-  {%- if task.description %}
-  - {{ task.description }}
-  {%- endif %}
+| [{{ task.name }}](tasks/{{ task_file.file }}#L{{ task.line | default('') }}) | {{ task.module | default('N/A') }} | {{ 'Yes' if task.when or task.block else 'No' }} | {{ task.line | default('N/A') }} |
 {%- endif %}
 {%- endfor %}
+
+{% if task_file.tasks | selectattr('description', 'defined') | list | length > 0 %}
+**Task Details:**
+{% for task in task_file.tasks %}
+{%- if task.name and task.description %}
+- **{{ task.name }}**: {{ task.description }}
+{%- endif %}
+{%- endfor %}
+{% endif %}
 
 {% endfor %}
 {% else %}
